# salsa-back-py

./: Dockerfile  README.md  analysis.py  api.py  app.py  detailed_distance_analysis.csv  main.py  me.csv  me2.csv  me3.csv  output.csv  pedro1.csv  process_pose.py  pyproject.toml  test.py  test_video.py
