[project]
name = "salsa-back"
version = "0.1.0"
description = ""
authors = [
    {name = "troccoli",email = "pedroaugustobelzkai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "numpy (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "salsa_back", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
