[tool.poetry]
name = "salsa-back"
version = "0.1.0"
description = ""
authors = ["troccoli <pedroaugustobelzkai@gmail.com>"]
readme = "README.md"
packages = [{include = "salsa_back", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
opencv-python = ">=4.11.0.86,<5.0.0.0"
numpy = ">=1.21.0,<2.0.0"
gradio = ">=5.34.2,<6.0.0"
mediapipe = "^0.10.21"
pandas = "^2.3.0"
matplotlib = "^3.10.3"
scipy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
